# cpp_test

./: CMakeLists.txt  build_and_run.bat  build_and_run_deploy.bat  build_and_run_simple.bat  convert_icons.py  create_icons.py  get_yaml_cpp.bat  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
release/: CMakeCache.txt  Makefile
release/cpp_espanso_helper_autogen/: deps
release/mein_gui_projekt_autogen/EWIEGA46WW/: moc_mainwindow.cpp
